updated img on body

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -33,7 +33,7 @@ body::before {
 
   @include medium {
     background-image: url("../images/bg-mobile-light.jpg");
-    background-size: 100vw 30vh;
+    background-size: 100vw 30%;
   }
 }
 
