added transition in css

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -79,7 +79,7 @@ body {
   .todo-input {
     border: none;
     caret-color: $blue;
-    background-color: inherit;
+    background-color: var(--todo-background);
     flex-grow: 1;
     max-width: 100%;
     transition: background-color 300ms ease;
@@ -97,6 +97,7 @@ body {
   border-radius: 0.5rem;
   margin-top: 5rem;
   box-shadow: 0 25px 30px var(--box-shadow);
+  transition: background-color 300ms ease;
 
   @include medium {
     margin-top: 2rem;
