--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -132,7 +132,7 @@ body {
   display: flex;
   align-items: center;
   gap: $gap;
-  cursor: move;
+  cursor: pointer;
   color: var(--todo-text);
   transition: all 300ms ease;
   border-bottom: 1px solid var(--todo-border);
