problem with sortable js fixed

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -145,6 +145,10 @@ body {
     color: var(--todo-text-hover);
   }
 
+  .todo {
+    width: 100%;
+  }
+
   .todo-check {
     @extend %todo-check;
     position: relative;
